# fornax

./: .gitignore  .gitmodules
backend/: .env.example  Cargo.toml
backend/src/: main.rs
backend/src/client/: mod.rs
backend/src/http/: mod.rs
mobile/: App.tsx  babel.config.js  bun.lockb  package.json  tamagui.config.ts
mobile/src/: navigation-wrapper.tsx
mobile/src/components/: container.tsx  footer.tsx  header.tsx
mobile/src/pages/: controls.tsx  home.tsx
mobile/src/types/: navigation.ts
