[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
rs_webos = { path = "./pkg/rs-webos" }
dotenv = "0.15.0"
serde_json = "1.0.91"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
tokio-tungstenite = "0.21.0"
url = "2.2.2"
